--- a/css/style.css
+++ b/css/style.css
@@ -412,11 +412,41 @@ body{
   color: #102746;
 }
 
+.img{
+  max-width: 100%;
+  height: auto;
+}
+
 .wrapper{
 max-width: 1060px;
 margin: 0 auto;
 }
 
+
+
+.wrapper-full{
+  max-width: 1262px;
+  margin: 0 auto;
+}
+
+.section-title{
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 42px;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.section-title::after{
+  display: block;
+  content: '';
+  width: 253px;
+  height: 3px;
+  background-color: #006DFE;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 /* header styles start */
 
 .header{
@@ -531,8 +561,12 @@ border: 0;
 
 /* Benefits styles start*/
 
+.benefits{
+  margin-bottom: 131px;
+}
+
 .benefits__wrap{
-  max-width: 1060px;
+  max-width: 1262px;
   background-color: white;
   margin: 0 auto;
   box-shadow: 0px 2px 20px rgba(21, 24, 36, 0.15993);
@@ -556,8 +590,90 @@ border: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 55px;
+  padding: 0 100px;
+}
+
+.benefits__card{
+  grid-column: span 1;
+  margin-bottom: 112px;
 }
 
 
+.benefits__card-pic{
+  max-width: 66px;
+  margin-bottom: 37px;
+}
+
+.benefits__card-thumb{
+  display: block;
+}
+
+.benefits__card-title{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  margin-bottom: 26px;
+}
+
+.benefits__card-desc{
+font-size: 16px;
+line-height: 24px;
+margin-bottom: 39px;
+}
+
+.benefits__card-more{
+  display: inline-block;
+  padding-right: 59px;
+  font-size: 16px;
+  line-height: 24px;
+  color: #006DFE;
+  text-decoration: none;
+  background: url(../img/svg/Shape.svg) no-repeat 95% center;
+  transition: .2s  all;
+}
+
+.benefits__card-more: hover, .benefits__card-more:focus{
+   background: url(../img/svg/Shape.svg) no-repeat right center;
+}
+
 /* Benefits styles end*/
 
+/* Places styles start*/
+
+
+.places__caption{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 36px;
+}
+
+.places__title{
+  margin-right: 15px;
+}
+
+.places__view-all{
+font-size: 16px;
+color: #006DFE;
+text-decoration: none;
+padding-right: 59px;
+background: url(../img/svg/Shape.svg) no-repeat right; center;
+}
+
+.places__view-all:hover, .places__view-all:focus{
+  opacity: .65;
+}
+
+.places__cards{
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 10px;
+  
+}
+
+.places__card_size_lg{
+  grid-column: span 3;
+}
+
+/* Places styles end*/
