--- a/css/style.css
+++ b/css/style.css
@@ -669,11 +669,31 @@ background: url(../img/svg/Shape.svg) no-repeat right; center;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 10px;
-  
+
 }
 
 .places__card_size_lg{
   grid-column: span 3;
+}
+
+.places__card{
+  grid-column: span 3;
+  position: relative;
+}
+
+places__card::after{
+  display: block;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color: rgba(21, 24, 36, 0.4);
+  z-index: 2;
+}
+.places__card-pic{
+  max-width: 100%;
+  height: 354px;
+  object-fit: cover;
+
 }
 
 /* Places styles end*/
